--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Sheet clone</title>
-    <link rel="shortcut icon" type="image/x-icon" href="png-transparent-google-docs-computer-icons-google-drive-google-slides-new-material-text-rectangle-logo.png">
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="png-transparent-google-docs-computer-icons-google-drive-google-slides-new-material-text-rectangle-logo.png"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -15,14 +19,16 @@
   </head>
   <body>
     <section class="tools">
-      <div class="options">
-        <span class="material-icons copy"> content_copy </span>
+      <form class="options" id="form" onchange="onFormChange()">
+        <!-- <span class="material-icons copy"> content_copy </span>
         <span class="material-icons cut"> content_cut </span>
-        <span class="material-icons paste"> content_paste </span>
+        <span class="material-icons paste"> content_paste </span> -->
         <select name="font-family" id="fontfamily">
-          <option value="sans">Sans pro</option>
-          <option value="monospace">Monospace</option>
-          <option value="sans-serif">Snas Serif</option>
+          <option value="'Courier New', Courier, monospace">Courier New</option>
+          <option value="'Times New Roman', Times, serif">
+            Times New Roman
+          </option>
+          <option value="Arial, Helvetica, sans-serif">Arial Helvatica</option>
         </select>
         <input
           type="number"
@@ -33,21 +39,101 @@
           id="fontsize"
           placeholder="Font Size"
         />
-
-        <span class="material-icons option-btn"> format_bold </span>
-        <span class="material-icons option-btn"> format_italic </span>
-        <span class="material-icons option-btn"> format_underlined </span>
+        
+        <div>
+          <input type="checkbox" id="bold" class="hidden-input" name="bold" />
+          <label class="material-icons option-btn" for="bold">
+            format_bold
+          </label>
+        </div>
+        <div>
+          <input
+            type="checkbox"
+            id="italic"
+            class="hidden-input"
+            name="italic"
+          />
+          <label class="material-icons option-btn" for="italic">
+            format_italic
+          </label>
+        </div>
+        <div>
+          <input
+            type="checkbox"
+            id="underlined"
+            class="hidden-input"
+            name="underlined"
+          />
+          <label class="material-icons option-btn" for="underlined">
+            format_underlined
+          </label>
+        </div>
         <div class="vertical-line"></div>
-        <span class="material-icons option-btn"> format_align_left </span>
-        <span class="material-icons option-btn"> format_align_center </span>
-        <span class="material-icons option-btn"> format_align_right </span>
+        <div class="text-align">
+          <input
+            type="radio"
+            name="textalign"
+            id="left"
+            class="hidden-input"
+            checked
+            value="left"
+          />
+          <label class="material-icons option-btn" for="left">
+            format_align_left
+          </label>
+          <input
+            type="radio"
+            name="textalign"
+            id="center"
+            class="hidden-input"
+            value="center"
+          />
+          <label class="material-icons option-btn" for="center">
+            format_align_center
+          </label>
+          <input
+            type="radio"
+            name="textalign"
+            id="right"
+            class="hidden-input"
+            value="right"
+          />
+          <label class="material-icons option-btn" for="right">
+            format_align_right
+          </label>
+        </div>
         <div class="vertical-line"></div>
-        <span class="material-icons option-btn"> format_color_text </span>
-        <span class="material-icons option-btn"> format_color_fill </span>
+        <div  class="text-align">
+          <input
+            type="color"
+            id="textcolor"
+            name="textcolor"
+            value="#000000"
+            class="hidden-input"
+          />
+          <label class="material-icons option-btn" for="textcolor">
+            format_color_text
+          </label>
+        </div>
+        <div class="text-align">
+          <input
+            type="color"
+            id="bgcolor"
+            name="bgcolor"
+            value="#ffffff"
+            class="hidden-input"
+          />
+          <label class="material-icons option-btn" for="bgcolor">
+            format_color_fill
+          </label>
+        </div>
+    
         <div class="vertical-line"></div>
-        <span class="material-icons download"> cloud_download </span>
-        <span class="material-icons open"> cloud_upload </span>
-      </div>
+        <button type="button" class="material-icons impot-export-btn">
+            cloud_upload
+          </button>
+          <button type="button" class="material-icons impot-export-btn" onclick="exportData()">cloud_download</button>
+    </form>
       <div class="bottom-section">
         <div id="active-cell">Null</div>
         <img
@@ -72,5 +158,6 @@
     </div>
     <script src="options.js"></script>
     <script src="./index.js"></script>
+    <script src="import-export.js"></script>
   </body>
 </html>
