--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </div>
     <section class="tools">
       <form class="options" id="form" onchange="onFormChange()">
-        <!-- <span class="material-icons copy"> content_copy </span>
+        <span class="material-icons copy"> content_copy </span>
         <span class="material-icons cut"> content_cut </span>
-        <span class="material-icons paste"> content_paste </span> -->
+        <span class="material-icons paste"> content_paste </span>
         <select name="font-family" id="fontfamily">
           <option value="'Courier New', Courier, monospace">Courier New</option>
           <option value="'Times New Roman', Times, serif">
